<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <EditText
        android:id="@+id/eName"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="29dp"
        android:autofillHints=""
        android:hint="@string/insert_a_name"
        android:inputType="textShortMessage|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tName"
        app:layout_constraintEnd_toStartOf="@+id/bClick"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butonsrc" />

    <Button
        android:id="@+id/bClick"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="76dp"
        android:text="@string/spune_hello"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eName"
        app:layout_constraintTop_toBottomOf="@+id/butonsh" />

    <TextView
        android:id="@+id/tName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="234dp"
        android:layout_marginRight="234dp"
        android:layout_marginBottom="17dp"
        android:hint="@string/greetings"
        android:textAlignment="center"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eName" />

    <Button
        android:id="@+id/butPop"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="16dp"
        android:text="@string/show_in_popup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/butonsrc"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="46dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/eName"
        app:layout_constraintEnd_toStartOf="@+id/butonsh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butonsh"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="46dp"
        android:text="@string/share"
        app:layout_constraintBottom_toTopOf="@+id/bClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/butonsrc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/butonp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/positive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/butonn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="211dp"
        android:layout_marginRight="211dp"
        android:layout_marginBottom="159dp"
        android:text="@string/negative"
        app:layout_constraintBottom_toTopOf="@+id/butPop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tName"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>
